--- a/TakeAwayExample2/Pages/Shared/_Layout.cshtml
+++ b/TakeAwayExample2/Pages/Shared/_Layout.cshtml
@@ -33,6 +33,20 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
+
+                        <!--The drop dow list for our new links-->
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropDown" data-toggle="dropdown">
+                                Admin
+                            </a>
+                            <div class="dropdown-menu">
+                                <a class="dropdown-item" asp-page="/Admin/Category/Index">Category</a>
+                                <a class="dropdown-item" asp-page="/Admin/FoodType/Index">Food Type</a>
+                                <a class="dropdown-item" asp-page="/Admin/MenuItem/Index">Menu Item</a>
+                                <a class="dropdown-item" asp-page="/Admin/User/Index">User</a>
+                            </div>
+                        </li>
+
                     </ul>
                 </div>
             </div>
