Added the Index and Upsert pages for Category. Adjusted the primary button click and the focus(border highlight) in the custom bootstap.

--- a/TakeAwayExample2/Pages/Admin/Category/Index.cshtml
+++ b/TakeAwayExample2/Pages/Admin/Category/Index.cshtml
@@ -8,7 +8,7 @@
         </div>
         <div class="col-6 text-right">
             <!--Upset == update and insert common name-->
-            <a asp-page="Upsert" class="btn btn-dark text-white">
+            <a asp-page="Upsert" class="btn btn-primary">
                 <!--Note i tag is for icons, the class is from font awesome need ?register?-->
                 <i class="fas fa-plus"></i> &nbsp; Create New
             </a>
