--- a/TakeAwayExample2/wwwroot/css/site.css
+++ b/TakeAwayExample2/wwwroot/css/site.css
@@ -15,7 +15,7 @@ a {
 .btn-primary {
     color: #fff;
     background-color: #8fbc8f;
-    border-color: #97c797;
+    border-color: #8fbc8f;
 }
 
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
