--- a/TakeAwayExample2/wwwroot/css/CustomBootstrap.css
+++ b/TakeAwayExample2/wwwroot/css/CustomBootstrap.css
@@ -2593,14 +2593,14 @@ fieldset:disabled a.btn {
 
 .btn-primary {
     color: #fff;
-    background-color: #007bff;
-    border-color: #007bff;
+    background-color: #8fbc8f;
+    border-color: #8fbc8f;
 }
 
     .btn-primary:hover {
         color: #fff;
         background-color: #8fbc8f;
-        border-color: #97c797;
+        border-color: #8fbc8f;
     }
 
     .btn-primary:focus, .btn-primary.focus {
@@ -2609,20 +2609,20 @@ fieldset:disabled a.btn {
 
     .btn-primary.disabled, .btn-primary:disabled {
         color: #fff;
-        background-color: #007bff;
-        border-color: #007bff;
+        background-color: #8fbc8f;
+        border-color: #8fbc8f;
     }
 
     .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active,
     .show > .btn-primary.dropdown-toggle {
         color: #fff;
-        background-color: #0062cc;
-        border-color: #005cbf;
+        background-color: #8fbc8f;
+        border-color: #8db58d;
     }
 
         .btn-primary:not(:disabled):not(.disabled):active:focus, .btn-primary:not(:disabled):not(.disabled).active:focus,
         .show > .btn-primary.dropdown-toggle:focus {
-            box-shadow: 0 0 0 0.2rem rgba(38, 143, 255, 0.5);
+            box-shadow: 0 0 0 0.2rem rgba(167, 235, 165, 0.5);
         }
 
 .btn-secondary {
