Added the missing image property in the menuItem repository, fixing the update not updating the image path in database. Fixed the tag-helpers on the shared page to point to the new home page.

--- a/TakeAwayExample2/Pages/Admin/MenuItem/Upsert.cshtml
+++ b/TakeAwayExample2/Pages/Admin/MenuItem/Upsert.cshtml
@@ -37,7 +37,7 @@
                         <label asp-for="MenuItemObj.MenuItem.MenuItemImage"></label>
                     </div>
                     <div class="col-9">
-                        <input type="file" class="form-control" name="files" id="uploadBox" />
+                        <input asp-for="MenuItemObj.MenuItem.MenuItemImage" type="file" class="form-control" name="files" id="uploadBox" />
                     </div>
                 </div>
                 <div class="form-group row">
