--- a/TakeAwayExample2/wwwroot/css/CustomBootstrap.css
+++ b/TakeAwayExample2/wwwroot/css/CustomBootstrap.css
@@ -2048,9 +2048,9 @@ pre {
 .form-control:focus {
     color: #495057;
     background-color: #fff;
-    border-color: #80bdff;
+    border-color: #8fbc8f;
     outline: 0;
-    box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+    box-shadow: 0 0 0 0.2rem rgba(40, 167, 69, 0.25);
 }
 
 .form-control::-webkit-input-placeholder {
@@ -2604,7 +2604,7 @@ fieldset:disabled a.btn {
     }
 
     .btn-primary:focus, .btn-primary.focus {
-        box-shadow: 0 0 0 0.2rem rgba(38, 143, 255, 0.5);
+        box-shadow: 0 0 0 0.2rem rgba(143, 188, 143, 0.5);
     }
 
     .btn-primary.disabled, .btn-primary:disabled {
@@ -5587,8 +5587,8 @@ a.badge-dark:focus, a.badge-dark.focus {
     .list-group-item.active {
         z-index: 2;
         color: #fff;
-        background-color: #007bff;
-        border-color: #007bff;
+        background-color: #8fbc8f;
+        border-color: #8fbc8f;
     }
 
 .list-group-horizontal {
