--- a/TakeAwayExample2/Areas/Identity/Pages/Account/Register.cshtml
+++ b/TakeAwayExample2/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,12 +1,89 @@
 ﻿@page
 @model RegisterModel
+
+@*Needed to bring in the user roles in the static utilty project*@
+@using TakeAwayExample2.Utility
+
 @{
     ViewData["Title"] = "Register";
 }
 
 <h1>@ViewData["Title"]</h1>
 
-<div class="row">
+<form method="post" autocomplete="off" asp-route-returnUrl="@Model.ReturnUrl">
+    <div class="py-4 my-4">
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <div class="row form-group">
+            <div class="col-8 offset-2">
+
+                <div class="card">
+
+                    <div class="card-body px-lg-5 pt-4">
+                        <h3 class="col-12 text-primary text-center py-4">
+                            <strong>Sign Up</strong>
+                        </h3>
+
+                        <div class="py-2">
+                            <div>
+                                <input type="text" asp-for="Input.FirstName" placeholder="First Name" class="form-control" />
+                                <span asp-validation-for="Input.FirstName" class="text-danger"></span>
+                            </div>
+                        </div>
+
+                        <div class="py-2">
+                            <input type="text" asp-for="Input.LastName" placeholder="Last Name" class="form-control" />
+                            <span asp-validation-for="Input.LastName" class="text-danger"></span>
+                        </div>
+
+                        <div class="py-2">
+                            <input type="email" asp-for="Input.Email" placeholder="Email" class="form-control" />
+                            <span asp-validation-for="Input.Email" class="text-danger"></span>
+                        </div>
+
+                        <div class="py-2">
+                            <input type="tel" asp-for="Input.PhoneNumber" placeholder="Phone Number" class="form-control" />
+                            <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
+                        </div>
+
+                        <div class="py-2">
+                            <input type="password" asp-for="Input.Password" autocomplete="off" placeholder="Password" class="form-control" />
+                            <span asp-validation-for="Input.Password" class="text-danger"></span>
+                        </div>
+
+                        <div class="py-2">
+                            <input type="password" asp-for="Input.ConfirmPassword" autocomplete="off" placeholder="Confirm Password" class="form-control" />
+                            <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+                        </div>
+
+                        <div class="py-2">
+                            <!--Need to include the utity project-->
+                            <select class="form-control" name="drpUserRole">
+                                <option value="" selected disabled hidden>- Choose Role -</option>
+                                <option value="@SD.KitchenRole">@SD.KitchenRole</option>
+                                <option value="@SD.FrontDeskRole">@SD.FrontDeskRole</option>
+                                <option value="@SD.ManagerRole">@SD.ManagerRole</option>
+                                <option value="@SD.CustomerRole">@SD.CustomerRole</option>
+                            </select>
+                            @*<input type="radio" name="rdUserRole" value="@SD.KitchenRole" /> @SD.KitchenRole
+                                <input type="radio" name="rdUserRole" value="@SD.FrontDeskRole" /> @SD.FrontDeskRole
+                                <input type="radio" name="rdUserRole" value="@SD.ManagerRole" /> @SD.ManagerRole
+                                <input type="radio" name="rdUserRole" value="@SD.CustomerRole" /> @SD.CustomerRole*@
+                        </div>
+
+                        <button type="submit" class="btn btn-success">Register</button>
+
+                        <p>By clicking <em>Register</em> you are agree to our <a href="#" target="_blank">terms of service</a>.</p>
+
+                    </div>
+
+                </div>
+
+            </div>
+        </div>
+    </div>
+</form>
+
+@*<div class="row">
     <div class="col-md-4">
         <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
             <h4>Create a new account.</h4>
@@ -60,7 +137,7 @@
             }
         </section>
     </div>
-</div>
+</div>*@
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
