--- a/TakeAwayExample2/Pages/Admin/FoodType/Index.cshtml
+++ b/TakeAwayExample2/Pages/Admin/FoodType/Index.cshtml
@@ -1,32 +1,45 @@
 ﻿@page
 @model TakeAwayExample2.Pages.Admin.FoodType.IndexModel
 
-<div class="border container custom-container">
-    <div class="row">
-        <div class="col-6">
-            <h2 class="text-primary align-middle">Food Type</h2>
+@using TakeAwayExample2.Utility
+
+@if (User.IsInRole(SD.ManagerRole))
+{
+
+    <div class="border container custom-container">
+        <div class="row">
+            <div class="col-6">
+                <h2 class="text-primary align-middle">Food Type</h2>
+            </div>
+            <div class="col-6 text-right">
+                <a asp-page="Upsert" class="btn btn-primary">
+                    <i class="fas fa-plus"></i> &nbsp; Create New
+                </a>
+            </div>
         </div>
-        <div class="col-6 text-right">
-            <a asp-page="Upsert" class="btn btn-primary">
-                <i class="fas fa-plus"></i> &nbsp; Create New
-            </a>
+
+        <br />
+
+        <div class="table-responsive">
+            <table id="DT_load" class="table table-striped table-bordered">
+                <thead>
+                    <tr>
+                        <th>Food Type Name</th>
+                        <th></th>
+                    </tr>
+                </thead>
+            </table>
         </div>
+
     </div>
 
-    <br />
-
-    <div class="table-responsive">
-        <table id="DT_load" class="table table-striped table-bordered">
-            <thead>
-                <tr>
-                    <th>Food Type Name</th>
-                    <th></th>
-                </tr>
-            </thead>
-        </table>
+}
+else
+{
+    <div>
+        <h1 class="text-danger">Access Denied!</h1>
     </div>
-
-</div>
+}
 
 @section Scripts{
     <script src="~/js/foodType.js"></script>
