--- a/TakeAwayExample2/Pages/Shared/_Layout.cshtml
+++ b/TakeAwayExample2/Pages/Shared/_Layout.cshtml
@@ -53,6 +53,14 @@
                             </li>
                         }
 
+                        <!--May need to add an if statement to render below-->
+                        <!--Placing this in the login partial-->
+                        @*<li>
+                                <a href="#" class="nav-link">
+                                    <i class="fas fa-shopping-cart"></i>&nbsp;(0)
+                                </a>
+                            </li>*@
+
                     </ul>
                 </div>
             </div>
