Created orderHeader and oderDetail class. Added the DbSet of these class models to the application database context. Created a view model that holds both shopping cart and order header class. Created a razor page in the Pages/Customer/Cart folder. Created a repository and interface for both orderheader and orderdetail. Added the orderheader and orderdetail to the unitOfWork and IunitOfWork. Added a link to customer cart when the cart icon is click. Added the razor syntax to the razor page to loop through items in the cart. Added a round_off function to the cart. Changed the round_off function in the menuItem index c# code so that loop is removed from the function, this was done so we can reuse the round_off function. Added tag helpers for the button group on shopping cart index page, and added the logic to c# page to handle them. Created the Summary Page that uses the order details model.

--- a/TakeAwayExample2/Pages/Shared/_LoginPartial.cshtml
+++ b/TakeAwayExample2/Pages/Shared/_LoginPartial.cshtml
@@ -15,9 +15,9 @@
         @if (HttpContextAccessor.HttpContext.Session.GetString(SD.ShoppingCart) != null)
         {
             <li>
-                <a href="#" class="nav-link">
+                <a asp-page="/Customer/Cart/Index" class="nav-link">
                     @{ var count = HttpContextAccessor.HttpContext.Session.GetInt32(SD.ShoppingCart); }
-                    <i class="fas fa-shopping-cart"></i>&nbsp;(@count)
+                    <i class="fas fa-shopping-basket"></i>&nbsp;(@count)
                 </a>
             </li>
         }
