Added an image for the Order comfirmation page.

--- a/TakeAwayExample2/Pages/Customer/Cart/OrderConfirmation.cshtml
+++ b/TakeAwayExample2/Pages/Customer/Cart/OrderConfirmation.cshtml
@@ -8,7 +8,7 @@
         <h1 class="text-primary text-center">Order Placed Successfully!</h1>
         <p>Your Order Number is: @Model.orderId</p>
         <br />
-        <img src="~/images/MyImage" style="width: 65%;" />
+        <img src="~/images/AppImages/food share-photo.jpeg" style="width: 65%;" />
     </div>
     <div>
         <p>Your order has been placed successfully!</p>
