Fixed typos. Fixed the foreign key property in the Order confirmation page.

--- a/TakeAwayExample2/Pages/Customer/Cart/OrderConfirmation.cshtml
+++ b/TakeAwayExample2/Pages/Customer/Cart/OrderConfirmation.cshtml
@@ -6,7 +6,7 @@
 <div class="container row">
     <div class="col-12 text-center">
         <h1 class="text-primary text-center">Order Placed Successfully!</h1>
-        <p>Your Order Number is: @Model.orderId</p>
+        <p>Your Order Number is: @Model.OrderDetailID</p>
         <br />
         <img src="~/images/AppImages/food share-photo.jpeg" style="width: 65%;" />
     </div>
