--- a/TakeAwayExample2/Pages/Shared/_Layout.cshtml
+++ b/TakeAwayExample2/Pages/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
     <title>@ViewData["Title"] - TakeAwayExample2</title>
     <!--<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />-->
     <link href="~/css/CustomBootstrap.css" rel="stylesheet" />
-
+    @RenderSection("orderDetailStyle", false)
     <!--Addtional cdn for pop-ups, text editior, ...-->
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css" />
