Added the functionality to get the primary key of the category table and if the category key does not exit an entry will be created for this new category.

--- a/TakeAwayExample2/Pages/Shared/_Layout.cshtml
+++ b/TakeAwayExample2/Pages/Shared/_Layout.cshtml
@@ -49,6 +49,7 @@
                                     <a class="dropdown-item" asp-page="/Admin/FoodType/Index">Food Type</a>
                                     <a class="dropdown-item" asp-page="/Admin/MenuItem/Index">Menu Item</a>
                                     <a class="dropdown-item" asp-page="/Admin/User/Index">User</a>
+                                    <a class="dropdown-item" asp-page="/Admin/MenuItemBatch/BatchUpsert">Menu Item Batch Upload</a>
                                 </div>
                             </li>
                         }
