--- a/TakeAwayExample2/Pages/Customer/Home/Index.cshtml
+++ b/TakeAwayExample2/Pages/Customer/Home/Index.cshtml
@@ -26,7 +26,7 @@
                                             <img src="@menuItem.MenuItemImage" class="card-img p-2" />
                                             <div class="d-flex justify-content-between form-control" style="border: 0px;">
                                                 <div class="col-6 badge">@menuItem.Category.CategoryName</div>
-                                                <div class="col-6 h6">$@menuItem.MenuItemPrice</div>
+                                                <div class="col-6 h6">@menuItem.MenuItemPrice.ToString("c")</div>
                                             </div>
                                             <a asp-page="Details" class="btn btn-primary" asp-route-id="@menuItem.MenuItemID">Details</a>
                                         </div>
